package nl.han.soex.twee.prototype.service.AdviceStrategies;

import nl.han.soex.twee.prototype.domain.Accommodation;

public abstract class AdviceStrategy {

    abstract public Accommodation[] generateAdvice();
}
