@startuml
title code diagram for advice strategy

class AccommodationService {
    + generateAdvice(adviceStrategy) : Accommodation[]
}

class AdviceStrategy {
    generateAdvice() : Accommodation[]
}

class CheapestAdviceStrategy{
    - getHttpURLConnection() : HttpURLConnection
}

class PriciestAdviceStrategy{
    - getHttpURLConnection() : HttpURLConnection
}

AccommodationService --> AdviceStrategy
CheapestAdviceStrategy..|>AdviceStrategy
PriciestAdviceStrategy..|>AdviceStrategy
@enduml